<resources>
    <string name="app_name">Nova Lists</string>

    <!-- Change From Here -->

    <!-- Main Strings   -->
    <string name="subtitle">Welcome to</string>
    <string name="title">Nova List</string>
    <string name="companyNamePrefix">Powered by</string>
    <string name="companyName">Tech 4.32</string>
    <string name="loginTitle">Login</string>
    <string name="registerTitle">Register</string>
    <string name="registerDetailsTitle">User Details</string>

    <!-- Hint Strings   -->
    <string name="emailHint">Enter Email Address</string>
    <string name="passwordHint">Enter Password</string>
    <string name="nameHint">Enter Name</string>
    <string name="contactHint">Enter Contact</string>

    <!-- Buttons  -->
    <string name="loginBtn">Login</string>
    <string name="signOutBtn">Logout</string>
    <string name="registerBtn">Register Now</string>
    <string name="addUserDetailsBtn">Add Details</string>
</resources>