<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".RegisterUserDetailsActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:gravity="center"
        android:layout_gravity="top"
        android:layout_marginTop="100dp"
        android:textSize="50sp"
        android:textColor="@color/header"
        />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registerDetailsTitle"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:textSize="30sp"
        android:textColor="@color/smallHeader"
        />

    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nameHint"
        android:inputType="text"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:textSize="12sp"
        android:autofillHints=" " />

    <EditText
        android:id="@+id/userContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contactHint"
        android:inputType="text"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:textSize="12sp"
        android:autofillHints="Error" />

    <Button
        android:id="@+id/addbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addUserDetailsBtn"
        android:textSize="15sp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:background="@color/signUpBtn"
        />

</LinearLayout>