<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subtitle"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:textColor="@color/smallHeader"
        />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:textColor="@color/header"
        />

    <EditText
        android:id="@+id/userID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/userIDHint"
        android:inputType="text"
        android:layout_marginTop="50dp"
        android:textSize="12sp"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:layout_marginTop="5dp"
        android:textSize="12sp"
        />

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginBtn"
        android:textSize="15sp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:background="@color/signUpBtn"
        />

</LinearLayout>